--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   min-height: 60px;
   padding-left: 25px;
   font-size: large;
-  color: antiquewhite;
+  color: rgb(0, 0, 0);
   text-decoration: none;
 }
 .navbar-items {
@@ -19,7 +19,7 @@
   align-items: center;
   margin-left: 20px;
   text-decoration: none;
-  color: antiquewhite;
+  color: rgb(0, 0, 0);
 }
  
  
